--- a/client/main.html
+++ b/client/main.html
@@ -1,25 +1,22 @@
 <head>
-  <title>RemindersApp</title>
+  <title>Reminders App</title>
 </head>
 
 <body>
-  <h1>Welcome to Meteor!</h1>
 
-  {{> hello}}
-  {{> info}}
+  <h1>Reminders App</h1>
+
+  <ul>
+    <!-- Loop through reminders -->
+    {{#each reminders}}
+      {{> reminder}}
+    {{/each}}
+  </ul>
+  
 </body>
 
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
-</template>
-
-<template name="info">
-  <h2>Learn Meteor!</h2>
-  <ul>
-    <li><a href="https://www.meteor.com/try" target="_blank">Do the Tutorial</a></li>
-    <li><a href="http://guide.meteor.com" target="_blank">Follow the Guide</a></li>
-    <li><a href="https://docs.meteor.com" target="_blank">Read the Docs</a></li>
-    <li><a href="https://forums.meteor.com" target="_blank">Discussions</a></li>
-  </ul>
+<template name="reminder">
+  <li>{{title}}</li>
+  <li>{{description}}</li>
+  <li>{{date}}</li>
 </template>
