Display reminders from collection and fix more typos

--- a/client/main.html
+++ b/client/main.html
@@ -16,7 +16,9 @@
 </body>
 
 <template name="reminder">
-  <li>{{title}}</li>
-  <li>{{description}}</li>
-  <li>{{date}}</li>
+  <li>
+    <h3>{{title}}</h3>
+    <p>{{description}}</p>
+    <small>{{date}}</small>
+  </li>
 </template>
