Add reminders to collection via form

--- a/client/main.html
+++ b/client/main.html
@@ -3,8 +3,14 @@
 </head>
 
 <body>
-
   <h1>Reminders App</h1>
+
+  <!-- Input field to create new reminder, enter to submit -->
+  <form class="new-reminder">
+    <input type="text" id="title" placeholder="Title"/>
+    <input type="text" id="description" placeholder="Description"/>
+    <button type="submit">Add</button>
+  </form>
 
   <ul>
     <!-- Loop through reminders -->
