Add, delete and completed added to events

--- a/client/main.html
+++ b/client/main.html
@@ -22,9 +22,11 @@
 </body>
 
 <template name="reminder">
-  <li>
+  <li class="{{#if completed}}checked{{/if}}">
     <h3>{{title}}</h3>
     <p>{{description}}</p>
     <small>{{date}}</small>
+    <input type="checkbox" checked="{{completed}}" class="toggle-checked" />
+    <button class="delete">&times;</button>
   </li>
 </template>
