--- a/client/main.html
+++ b/client/main.html
@@ -31,14 +31,12 @@
         <input type="date" id="date"/><br/>
         <button type="submit">Submit</button>
       </form>
-      
 
+      <h3>Upcoming Events: {{incompleteCount}}</h3>
       <label class="hide-completed">
         <input type="checkbox" />
         <small>Hide Completed Events</small>
       </label>
-
-      <h3>Incomplete: {{incompleteCount}}</h3>
 
       <ul>
         <!-- Loop through reminders -->
@@ -55,12 +53,14 @@
 
 <!-- Reminder template -->
 <template name="reminder">
-  <li class="{{#if completed}}checked{{/if}}">
+  <li class="{{#if completed}}checked{{/if}} reminder_object">
     <h3>{{title}}</h3>
     <p>{{description}}</p>
-    {{formatDate date}}
-    <input type="checkbox" checked="{{completed}}" class="toggle-checked" />
-    <button class="edit">edit</button>
-    <button class="delete">&times;</button>
+    {{formatDate date}}<br/>
+    <div class="tool">
+      <input type="checkbox" checked="{{completed}}" class="toggle-checked" />
+      <button class="edit">E</button>
+      <button class="delete">&times;</button>
+    </div>
   </li>
 </template>
