Typo fix and update README

--- a/client/main.html
+++ b/client/main.html
@@ -56,7 +56,7 @@
   <li class="{{#if completed}}checked{{/if}} reminder_object">
     <h3>{{title}}</h3>
     <p>{{description}}</p>
-    {{formatDate date}}<br/>
+    <p>{{formatDate date}}</p>
     <div class="tool">
       <input type="checkbox" checked="{{completed}}" class="toggle-checked" />
       <button class="edit">E</button>
