Fix jumping on clicking checkboxes

--- a/client/main.html
+++ b/client/main.html
@@ -91,7 +91,7 @@
 
 <!-- Reminder template -->
 <template name="reminder">
-        <a href="#" class="list-group-item list-group-item-action {{#if completed}}checked{{/if}}">
+        <a href="#a" class="list-group-item list-group-item-action {{#if completed}}checked{{/if}}">
           <div class="d-flex w-100 justify-content-between">
             <h5 class="mb-1">{{title}}</h5>
             <small>
