Input form validation and disallow blank fields

--- a/client/main.html
+++ b/client/main.html
@@ -40,7 +40,7 @@
             <div class="input-group-prepend">
               <span class="input-group-text" id="basic-addon1">Title</span>
             </div>
-            <input type="text" class="form-control" id="title" placeholder="Title" aria-label="Title" aria-describedby="basic-addon1"/>
+            <input type="text" class="form-control" id="title" placeholder="Title" aria-label="Title" aria-describedby="basic-addon1" required/>
         </div>
 
         <!-- Description Input -->
@@ -48,7 +48,7 @@
             <div class="input-group-prepend">
               <span class="input-group-text" id="basic-addon1">Description</span>
             </div>
-            <input type="text" class="form-control" id="description" placeholder="Description" aria-label="Title" aria-describedby="basic-addon1">
+            <input type="text" class="form-control" id="description" placeholder="Description" aria-label="Title" aria-describedby="basic-addon1" required/>
         </div>
 
         <!-- Date Input -->
@@ -56,7 +56,7 @@
             <div class="input-group-prepend">
               <span class="input-group-text" id="basic-addon1">Date</span>
             </div>
-            <input class="form-control" id="date" type="date"/>
+            <input class="form-control" id="date" type="date" required/>
         </div>
               
         <button type="submit" class="btn btn-primary">Submit</button>
