Code cleanup and randomized colors for each reminder

--- a/client/main.html
+++ b/client/main.html
@@ -101,7 +101,7 @@
             </small>
           </div>
           <p class="mb-1">{{description}}</p>
-          
+          <div class="colorbox" style="background-color: {{color}}"></div>
           <div style="text-align: right">
             <button class="edit btn btn-primary btn-sm">Edit</button>
             <button class="delete btn btn-primary btn-sm">Delete</button>
